国家タグ追加

--- a/localisation/english/_map/countries_long_l_english.yml
+++ b/localisation/english/_map/countries_long_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
-#アジア
+##バニラ
+#アジア 
+ #UAE_united_emirates:0 "アラブ首長国連邦"
+ #UAE_united_emirates_DEF:0 "アラブ首長国連邦"
+ 
  ABK_kingdom:0 "アブハジア王国"
  ABK_kingdom_DEF:0 "アブハジア王国"
  ABK_principality:0 "アブハジア公国"
@@ -60,20 +64,20 @@
  BUK_emirate_DEF:0 "ブハラ首長国"
  BUK_khanate:0 "ブハラ・ハン国"
  BUK_khanate_DEF:0 "ブハラ・ハン国"
- BUK_republic:0 "ブハラ共和国"
- BUK_republic_DEF:0 "ブハラ共和国"
  BUK_peoples_republic:0 "ブハラ人民共和国"
  BUK_peoples_republic_DEF:0 "ブハラ人民共和国"
+ BUK_republic:0 "ブハラ共和国"
+ BUK_republic_DEF:0 "ブハラ共和国"
  
  BYA_republic:0 "ブリヤート共和国"
  BYA_republic_DEF:0 "ブリヤート共和国"
  
  CAM_kingdom:0 "カンボジア王国"
  CAM_kingdom_DEF:0 "カンボジア王国"
- CAM_republic:0 "カンボジア共和国"
- CAM_republic_DEF:0 "カンボジア共和国"
  CAM_peoples_republic:0 "カンボジア人民共和国"
  CAM_peoples_republic_DEF:0 "カンボジア人民共和国"
+ CAM_republic:0 "カンボジア共和国"
+ CAM_republic_DEF:0 "カンボジア共和国"
  CAM_state:0 "カンボジア国"
  CAM_state_DEF:0 "カンボジア国"
  
@@ -83,22 +87,22 @@
  CHI_kingdom_DEF:0 "中華王国"
  CHI_minguo:0 "中華民国"
  CHI_minguo_DEF:0 "中華民国"
- CHI_minguo_provisional_government:0 "中華民国臨時政府"
- CHI_minguo_provisional_government_DEF:0 "中華民国臨時政府"
- CHI_minguo_reformed_government:0 "中華民国維新政府"
- CHI_minguo_reformed_government_DEF:0 "中華民国維新政府"
  CHI_minguo_chongqing_goverment:0 "中華民国重慶政府"
  CHI_minguo_chongqing_goverment_DEF:0 "中華民国重慶政府"
  CHI_minguo_fuzhou_government:0 "中華民国福州政府"
  CHI_minguo_fuzhou_government_DEF:0 "中華民国福州政府"
  CHI_minguo_guangzhou_government:0 "中華民国広州政府"
  CHI_minguo_guangzhou_government_DEF:0 "中華民国広州政府"
+ CHI_minguo_provisional_government:0 "中華民国臨時政府"
+ CHI_minguo_provisional_government_DEF:0 "中華民国臨時政府"
+ CHI_minguo_reformed_government:0 "中華民国維新政府"
+ CHI_minguo_reformed_government_DEF:0 "中華民国維新政府"
  CHI_minguo_wuhan_government:0 "中華民国武漢政府"
  CHI_minguo_wuhan_government_DEF:0 "中華民国武漢政府"
- CHI_republic:0 "中華共和国"
- CHI_republic_DEF:0 "中華共和国"
  CHI_peoples_republic:0 "中華人民共和国"
  CHI_peoples_republic_DEF:0 "中華人民共和国"
+ CHI_republic:0 "中華共和国"
+ CHI_republic_DEF:0 "中華共和国"
  CHI_soviet_democratic_republic:0 "中華ソビエト民主共和国"
  CHI_soviet_democratic_republic_DEF:0 "中華ソビエト民主共和国"
  
@@ -199,10 +203,10 @@
  LEB_republic:0 "レバノン共和国"
  LEB_republic_DEF:0 "レバノン共和国"
  
- MAL_federation:0 "マレー連邦"
- MAL_federation_DEF:0 "マレー連邦"
  MAL_federated_states:0 "マレー連邦"
  MAL_federated_states_DEF:0 "マレー連邦"
+ MAL_federation:0 "マレー連邦"
+ MAL_federation_DEF:0 "マレー連邦"
  MAL_union:0 "マレー連合"
  MAL_union_DEF:0 "マレー連合"
  
@@ -226,17 +230,17 @@
  MEN_warlord:0 "蒙古軍閥"
  MEN_warlord_DEF:0 "蒙古軍閥"
  
- MLD_sultanate:0 "モルディブ・スルタン国"
- MLD_sultanate_DEF:0 "モルディブ・スルタン国"
  MLD_republic:0 "モルディブ共和国"
  MLD_republic_DEF:0 "モルディブ共和国"
+ MLD_sultanate:0 "モルディブ・スルタン国"
+ MLD_sultanate_DEF:0 "モルディブ・スルタン国"
  
- MON_state:0 "モンゴル国"
- MON_state_DEF:0 "モンゴル国"
- MON_republic:0 "モンゴル共和国"
- MON_republic_DEF:0 "モンゴル共和国"
  MON_peoples_republic:0 "モンゴル人民共和国"
  MON_peoples_republic_DEF:0 "モンゴル人民共和国"
+ MON_republic:0 "モンゴル共和国"
+ MON_republic_DEF:0 "モンゴル共和国"
+ MON_state:0 "モンゴル国"
+ MON_state_DEF:0 "モンゴル国"
  
  NEP_federal_democratic_republic:0 "ネパール連邦民主共和国"
  NEP_federal_democratic_republic_DEF:0 "ネパール連邦民主共和国"
@@ -250,10 +254,10 @@
  OMA_sultanate:0 "オマーン・スルタン国"
  OMA_sultanate_DEF:0 "オマーン・スルタン国"
  
- PAK_republic:0 "パキスタン共和国"
- PAK_republic_DEF:0 "パキスタン共和国"
  PAK_islamic_republic:0 "パキスタン・イスラム共和国"
  PAK_islamic_republic_DEF:0 "パキスタン・イスラム共和国"
+ PAK_republic:0 "パキスタン共和国"
+ PAK_republic_DEF:0 "パキスタン共和国"
  
  PAL_state:0 "パレスチナ国"
  PAL_state_DEF:0 "パレスチナ国"
@@ -316,11 +320,6 @@
  TAY_republic:0 "タイミル共和国"
  TAY_republic_DEF:0 "タイミル共和国"
  
- TUV_peoples_republic:0 "トゥヴァ人民共和国"
- TUV_peoples_republic_DEF:0 "トゥヴァ人民共和国"
- TUV_republic:0 "トゥヴァ共和国"
- TUV_republic_DEF:0 "トゥヴァ共和国"
- 
  TIB_holy_state:0 "チベット神聖国"
  TIB_holy_state_DEF:0 "チベット神聖国"
  TIB_kingdom:0 "チベット王国"
@@ -334,8 +333,10 @@
  TUR_republic:0 "トルコ共和国"
  TUR_republic_DEF:0 "トルコ共和国"
  
- #UAE_united_emirates:0 "アラブ首長国連邦"
- #UAE_united_emirates_DEF:0 "アラブ首長国連邦"
+ TUV_peoples_republic:0 "トゥヴァ人民共和国"
+ TUV_peoples_republic_DEF:0 "トゥヴァ人民共和国"
+ TUV_republic:0 "トゥヴァ共和国"
+ TUV_republic_DEF:0 "トゥヴァ共和国"
  
  UZB_republic:0 "ウズベキスタン共和国"
  UZB_republic_DEF:0 "ウズベキスタン共和国"
@@ -376,7 +377,7 @@
  YUN_warlord:0 "雲南軍閥"
  YUN_warlord_DEF:0 "雲南軍閥"
  
-#ヨーロッパ
+#ヨーロッパ 
  ADU_republic:0 "アンダルシア共和国"
  ADU_republic_DEF:0 "アンダルシア共和国"
  
@@ -425,10 +426,10 @@
  
  BOS_condominium:0 "共同統治領ボスニア"
  BOS_condominium_DEF:0 "共同統治領ボスニア"
- BOS_kingdom:0 "ボスニア王国"
- BOS_kingdom_DEF:0 "ボスニア王国"
  BOS_islamic_republic:0 "ボスニア・イスラム共和国"
  BOS_islamic_republic_DEF:0 "ボスニア・イスラム共和国"
+ BOS_kingdom:0 "ボスニア王国"
+ BOS_kingdom_DEF:0 "ボスニア王国"
  BOS_republic:0 "ボスニア共和国"
  BOS_republic_DEF:0 "ボスニア共和国"
  
@@ -444,10 +445,10 @@
  
  BUL_kingdom:0 "ブルガリア王国"
  BUL_kingdom_DEF:0 "ブルガリア王国"
- BUL_republic:0 "ブルガリア共和国"
- BUL_republic_DEF:0 "ブルガリア共和国"
  BUL_peoples_republic:0 "ブルガリア人民共和国"
  BUL_peoples_republic_DEF:0 "ブルガリア人民共和国"
+ BUL_republic:0 "ブルガリア共和国"
+ BUL_republic_DEF:0 "ブルガリア共和国"
  BUL_tsardom:0 "ブルガリア・ツァール国"
  BUL_tsardom_DEF:0 "ブルガリア・ツァール国"
  
@@ -540,10 +541,10 @@
  FRA_kingdom_DEF:0 "フランス王国"
  FRA_republic:0 "フランス共和国"
  FRA_republic_DEF:0 "フランス共和国"
- FRA_socialist_workers_republic:0 "フランス社会主義労働者共和国"
- FRA_socialist_workers_republic_DEF:0 "フランス社会主義労働者共和国"
  FRA_republic_provisional_government:0 "フランス共和国臨時政府"
  FRA_republic_provisional_government_DEF:0 "フランス共和国臨時政府"
+ FRA_socialist_workers_republic:0 "フランス社会主義労働者共和国"
+ FRA_socialist_workers_republic_DEF:0 "フランス社会主義労働者共和国"
  FRA_state:0 "フランス国"
  FRA_state_DEF:0 "フランス国"
  
@@ -626,13 +627,13 @@
  KBK_republic:0 "カバルダ・バルカル共和国"
  KBK_republic_DEF:0 "カバルダ・バルカル共和国"
  
+ KOM_republic:0 "コミ共和国"
+ KOM_republic_DEF:0 "コミ共和国"
+ 
  KOS_republic:0 "コソボ共和国"
  KOS_republic_DEF:0 "コソボ共和国"
  KOS_socialist_republic:0 "コソボ社会主義共和国"
  KOS_socialist_republic_DEF:0 "コソボ社会主義共和国"
- 
- KOM_republic:0 "コミ共和国"
- KOM_republic_DEF:0 "コミ共和国"
  
  KSH_republic:0 "カシュビア共和国"
  KSH_republic_DEF:0 "カシュビア共和国"
@@ -680,19 +681,19 @@
  MEL_republic:0 "マリ・エル共和国"
  MEL_republic_DEF:0 "マリ・エル共和国"
  
- MLT_state:0 "マルタ国"
- MLT_state_DEF:0 "マルタ国"
  MLT_republic:0 "マルタ共和国"
  MLT_republic_DEF:0 "マルタ共和国"
+ MLT_state:0 "マルタ国"
+ MLT_state_DEF:0 "マルタ国"
  
  MNT_independent_state:0 "モンテネグロ独立国"
  MNT_independent_state_DEF:0 "モンテネグロ独立国"
  MNT_kingdom:0 "モンテネグロ王国"
  MNT_kingdom_DEF:0 "モンテネグロ王国"
- MNT_principality:0 "モンテネグロ公国"
- MNT_principality_DEF:0 "モンテネグロ公国"
  MNT_peoples_republic:0 "モンテネグロ人民共和国"
  MNT_peoples_republic_DEF:0 "モンテネグロ人民共和国"
+ MNT_principality:0 "モンテネグロ公国"
+ MNT_principality_DEF:0 "モンテネグロ公国"
  MNT_republic:0 "モンテネグロ共和国"
  MNT_republic_DEF:0 "モンテネグロ共和国"
  MNT_socialist_republic:0 "モンテネグロ社会主義共和国"
@@ -730,16 +731,16 @@
  OCC_state:0 "オクシタニア国"
  OCC_state_DEF:0 "オクシタニア国"
  
- POL_most_serene_commonwealth:0 "晴朗極まる共和国ポーランド"
- POL_most_serene_commonwealth_DEF:0 "晴朗極まる共和国ポーランド"
  POL_kingdom:0 "ポーランド王国"
  POL_kingdom_DEF:0 "ポーランド王国"
+ POL_most_serene_commonwealth:0 "晴朗極まる共和国ポーランド"
+ POL_most_serene_commonwealth_DEF:0 "晴朗極まる共和国ポーランド"
+ POL_peoples_republic:0 "ポーランド人民共和国"
+ POL_peoples_republic_DEF:0 "ポーランド人民共和国"
  POL_republic:0 "ポーランド共和国"
  POL_republic_DEF:0 "ポーランド共和国"
  POL_republic_national_unity_provisional_government:0 "ポーランド共和国挙国一致臨時政府"
  POL_republic_national_unity_provisional_government_DEF:0 "ポーランド共和国挙国一致臨時政府"
- POL_peoples_republic:0 "ポーランド人民共和国"
- POL_peoples_republic_DEF:0 "ポーランド人民共和国"
  
  POR_kingdom:0 "ポルトガル王国"
  POR_kingdom_DEF:0 "ポルトガル王国"
@@ -776,10 +777,10 @@
  SER_kingdom_DEF:0 "セルビア王国"
  SER_national_salvation_government:0 "セルビア救国政府"
  SER_national_salvation_government_DEF:0 "セルビア救国政府"
- SER_principality:0 "セルビア公国"
- SER_principality_DEF:0 "セルビア公国"
  SER_peoples_republic:0 "セルビア人民共和国"
  SER_peoples_republic_DEF:0 "セルビア人民共和国"
+ SER_principality:0 "セルビア公国"
+ SER_principality_DEF:0 "セルビア公国"
  SER_republic:0 "セルビア共和国"
  SER_republic_DEF:0 "セルビア共和国"
  SER_socialist_republic:0 "セルビア社会主義共和国"
@@ -801,15 +802,15 @@
  SLO_republic_DEF:0 "スロバキア共和国"
  SLO_socialist_republic:0 "スロバキア社会主義共和国"
  SLO_socialist_republic_DEF:0 "スロバキア社会主義共和国"
+ SLO_socialist_republic:0 "スロベニア社会主義共和国"
+ SLO_socialist_republic_DEF:0 "スロベニア社会主義共和国"
  
- SLV_republic:0 "スロベニア共和国"
- SLV_republic_DEF:0 "スロベニア共和国"
  SLV_peoples_republic:0 "スロベニア人民共和国"
  SLV_peoples_republic_DEF:0 "スロベニア人民共和国"
  SLV_republic:0 "スロベニア共和国"
  SLV_republic_DEF:0 "スロベニア共和国"
- SLO_socialist_republic:0 "スロベニア社会主義共和国"
- SLO_socialist_republic_DEF:0 "スロベニア社会主義共和国"
+ SLV_republic:0 "スロベニア共和国"
+ SLV_republic_DEF:0 "スロベニア共和国"
  
  SOV_republics_union:0 "ソビエト共和国連邦"
  SOV_republics_union_DEF:0 "ソビエト共和国連邦"
@@ -878,7 +879,7 @@
  YUG_socialist_federal_republic:0 "ユーゴスラビア社会主義連邦共和国"
  YUG_socialist_federal_republic_DEF:0 "ユーゴスラビア社会主義連邦共和国"
  
-#アフリカ
+#アフリカ 
  ALG_peoples_democratic_republic:0 "アルジェリア民主人民共和国"
  ALG_peoples_democratic_republic_DEF:0 "アルジェリア民主人民共和国"
  ALG_republic:0 "アルジェリア共和国"
@@ -906,10 +907,10 @@
  CAR_republic:0 "中央アフリカ共和国"
  CAR_republic_DEF:0 "中央アフリカ共和国"
  
- CGB_republic:0 "コンゴブラザヴィル共和国"
- CGB_republic_DEF:0 "コンゴブラザヴィル共和国"
  CGB_peoples_republic:0 "コンゴブラザヴィル人民共和国"
  CGB_peoples_republic_DEF:0 "コンゴブラザヴィル人民共和国"
+ CGB_republic:0 "コンゴブラザヴィル共和国"
+ CGB_republic_DEF:0 "コンゴブラザヴィル共和国"
  
  CHA_republic:0 "チャド共和国"
  CHA_republic_DEF:0 "チャド共和国"
@@ -932,10 +933,10 @@
  
  DAH_kingdom:0 "ダホメ王国"
  DAH_kingdom_DEF:0 "ダホメ王国"
- DAH_republic:0 "ダホメ共和国"
- DAH_republic_DEF:0 "ダホメ共和国"
  DAH_peoples_republic:0 "ダホメ人民共和国"
  DAH_peoples_republic_DEF:0 "ダホメ人民共和国"
+ DAH_republic:0 "ダホメ共和国"
+ DAH_republic_DEF:0 "ダホメ共和国"
  
  DJI_republic:0 "ジブチ共和国"
  DJI_republic_DEF:0 "ジブチ共和国"
@@ -1022,10 +1023,10 @@
  MRT_republic:0 "モーリタニア共和国"
  MRT_republic_DEF:0 "モーリタニア共和国"
  
- MZB_republic:0 "モザンビーク共和国"
- MZB_republic_DEF:0 "モザンビーク共和国"
  MZB_peoples_republic:0 "モザンビーク人民共和国"
  MZB_peoples_republic_DEF:0 "モザンビーク人民共和国"
+ MZB_republic:0 "モザンビーク共和国"
+ MZB_republic_DEF:0 "モザンビーク共和国"
  
  NGA_federation:0 "ナイジェリア連邦"
  NGA_federation_DEF:0 "ナイジェリア連邦"
@@ -1094,7 +1095,13 @@
  ZIM_republic:0 "ジンバブエ共和国"
  ZIM_republic_DEF:0 "ジンバブエ共和国"
  
-#新大陸
+#新大陸 
+ #CSA:0 "アメリカ"
+ #CSA_DEF:0 "アメリカ"
+ 
+ #USA:0 "アメリカ"
+ #USA_DEF:0 "アメリカ"
+ 
  ARG_confederation:0 "アルゼンチン連合"
  ARG_confederation_DEF:0 "アルゼンチン連合"
  ARG_republic:0 "アルゼンチン共和国"
@@ -1145,9 +1152,6 @@
  
  CRC_republic:0 "キュラソー共和国"
  CRC_republic_DEF:0 "キュラソー共和国"
- 
- #CSA:0 "アメリカ"
- #CSA_DEF:0 "アメリカ"
  
  CUB_republic:0 "キューバ共和国"
  CUB_republic_DEF:0 "キューバ共和国"
@@ -1220,9 +1224,6 @@
  URG_oriental_republic:0 "ウルグアイ東方共和国"
  URG_oriental_republic_DEF:0 "ウルグアイ東方共和国"
  
- #USA:0 "アメリカ"
- #USA_DEF:0 "アメリカ"
- 
  VEN_bolivarian_republic:0 "ベネズエラ・ボリバル共和国"
  VEN_bolivarian_republic_DEF:0 "ベネズエラ・ボリバル共和国"
  VEN_republic:0 "ベネズエラ共和国"
@@ -1232,7 +1233,7 @@
  VEN_united_states:0 "ベネズエラ合衆国"
  VEN_united_states_DEF:0 "ベネズエラ合衆国"
  
-#大洋州
+#大洋州 
  AST_commonwealth:0 "オーストラリア連邦"
  AST_commonwealth_DEF:0 "オーストラリア連邦"
  AST_republic:0 "オーストラリア共和国"
@@ -1273,8 +1274,8 @@
  TAH_republic:0 "タヒチ共和国"
  TAH_republic_DEF:0 "タヒチ共和国"
  
-##GEACPS
-#アジア
+##GEACPS 
+#アジア 
  ALP_republic:0 "アレッポ共和国"
  ALP_republic_DEF:0 "アレッポ共和国"
  ALP_state:0 "アレッポ国"
@@ -1284,6 +1285,9 @@
  ALW_republic_DEF:0 "アラウイ共和国"
  ALW_state:0 "アラウイ国"
  ALW_state_DEF:0 "アラウイ国"
+ 
+ AMR_republic:0 "アムール共和国"
+ AMR_republic_DEF:0 "アムール共和国"
  
  ANH_minguo:0 "安徽民国"
  ANH_minguo_DEF:0 "安徽民国"
@@ -1296,9 +1300,6 @@
  
  ANN_state:0 "アンナン国"
  ANN_state_DEF:0 "アンナン国"
- 
- AMR_republic:0 "アムール共和国"
- AMR_republic_DEF:0 "アムール共和国"
  
  BAL_united_kingdom:0 "バルーチスターン連合王国"
  BAL_united_kingdom_DEF:0 "バルーチスターン連合王国"
@@ -1498,9 +1499,9 @@
  KAC_republic_DEF:0 "カチン共和国"
  
  KAS_kingdom:0 "カシュミール王国"
- KAS_kingdom_DEF:0 "カシミール王国"
+ KAS_kingdom_DEF:0 "カシュミール王国"
  KAS_republic:0 "カシュミール共和国"
- KAS_republic_DEF:0 "カシミール共和国"
+ KAS_republic_DEF:0 "カシュミール共和国"
  
  KAY_republic:0 "カヤー共和国"
  KAY_republic_DEF:0 "カヤー共和国"
@@ -1696,11 +1697,10 @@
  
  SYE_democratic_republic:0 "南イエメン民主共和国"
  SYE_democratic_republic_DEF:0 "南イエメン民主共和国"
- SYE_republic_DEF:0 "南イエメン共和国"
- SYE_republic:0 "南イエメン共和国"
- SYE_republic_DEF:0 "南イエメン共和国"
  SYE_peoples_democratic_republic:0 "南イエメン人民民主共和国"
  SYE_peoples_democratic_republic_DEF:0 "南イエメン人民民主共和国"
+ SYE_republic:0 "南イエメン共和国"
+ SYE_republic_DEF:0 "南イエメン共和国"
  
  TER_republic:0 "トレンガヌ共和国"
  TER_republic_DEF:0 "トレンガヌ共和国"
@@ -1710,11 +1710,11 @@
  TLS_democratic_republic:0 "東ティモール民主共和国"
  TLS_democratic_republic_DEF:0 "東ティモール民主共和国"
  
- TOK_repulic:0 "トンキン共和国"
- TOK_repulic_DEF:0 "トンキン共和国"
- 
  TNG_republic:0 "タンガニスタン共和国"
  TNG_republic_DEF:0 "タンガニスタン共和国"
+ 
+ TOK_repulic:0 "トンキン共和国"
+ TOK_repulic_DEF:0 "トンキン共和国"
  
  TRV_kingdom:0 "トラヴァンコール王国"
  TRV_kingdom_DEF:0 "トラヴァンコール王国"
@@ -1754,15 +1754,6 @@
  XIZ_warlord:0 "西藏軍閥"
  XIZ_warlord_DEF:0 "西藏軍閥"
  
- ZHI_minguo:0 "直隷民国"
- ZHI_minguo_DEF:0 "直隷民国"
- ZHI_republic:0 "直隷共和国"
- ZHI_republic_DEF:0 "直隷共和国"
- ZHI_soviet_government:0 "直隷ソビエト政府"
- ZHI_soviet_government_DEF:0 "直隷ソビエト政府"
- ZHI_warlord:0 "直隷軍閥"
- ZHI_warlord_DEF:0 "直隷軍閥"
- 
  ZHE_minguo:0 "浙江民国"
  ZHE_minguo_DEF:0 "浙江民国"
  ZHE_republic:0 "浙江共和国"
@@ -1772,7 +1763,16 @@
  ZHE_warlord:0 "浙江軍閥"
  ZHE_warlord_DEF:0 "浙江軍閥"
  
-#ヨーロッパ
+ ZHI_minguo:0 "直隷民国"
+ ZHI_minguo_DEF:0 "直隷民国"
+ ZHI_republic:0 "直隷共和国"
+ ZHI_republic_DEF:0 "直隷共和国"
+ ZHI_soviet_government:0 "直隷ソビエト政府"
+ ZHI_soviet_government_DEF:0 "直隷ソビエト政府"
+ ZHI_warlord:0 "直隷軍閥"
+ ZHI_warlord_DEF:0 "直隷軍閥"
+ 
+#ヨーロッパ 
  ADR_co-principality:0 "アンドラ共同公国"
  ADR_co-principality_DEF:0 "アンドラ共同公国"
  ADR_kingdom:0 "アンドラ王国"
@@ -1802,6 +1802,9 @@
  BRL_free_city:0 "自由都市ベルリン"
  BRL_free_city_DEF:0 "自由都市ベルリン"
  
+ BYZ_empire:0 "ビザンツ帝国"
+ BYZ_empire_DEF:0 "ビザンツ帝国"
+ 
  CHE_republic:0 "チェチェン共和国"
  CHE_republic_DEF:0 "チェチェン共和国"
  
@@ -1818,10 +1821,10 @@
  CRL_republic:0 "クールラント共和国"
  CRL_republic_DEF:0 "クールラント共和国"
  
- DAL_republic:0 "ダルマチア共和国"
- DAL_republic_DEF:0 "ダルマチア共和国"
  DAL_kingdom:0 "ダルマチア王国"
  DAL_kingdom_DEF:0 "ダルマチア王国"
+ DAL_republic:0 "ダルマチア共和国"
+ DAL_republic_DEF:0 "ダルマチア共和国"
  
  EUR_union:0 "ヨーロッパ連合"
  EUR_union_DEF:0 "ヨーロッパ連合"
@@ -1871,6 +1874,9 @@
  JER_republic:0 "ジャージー共和国"
  JER_republic_DEF:0 "ジャージー共和国"
  
+ LIE_principality:0 "リヒテンシュタイン侯国"
+ LIE_principality_DEF:0 "リヒテンシュタイン侯国"
+ 
  LIV_kingdom:0 "リヴォニア王国"
  LIV_kingdom_DEF:0 "リヴォニア王国"
  LIV_republic:0 "リヴォニア共和国"
@@ -1881,9 +1887,6 @@
  
  LOD_kingdom:0 "ロドメリア王国"
  LOD_kingdom_DEF:0 "ロドメリア王国"
- 
- LIE_principality:0 "リヒテンシュタイン侯国"
- LIE_principality_DEF:0 "リヒテンシュタイン侯国"
  
  MCO_principality:0 "モナコ公国"
  MCO_principality_DEF:0 "モナコ公国"
@@ -1923,6 +1926,14 @@
  SCA_united_kingdom:0 "スカンディナヴィア連合王国"
  SCA_united_kingdom_DEF:0 "スカンディナヴィア連合王国"
  
+ SEM_union:0 "サーミランド連合"
+ SEM_union_DEF:0 "サーミランド連合"
+ 
+ SGR_confederation:0 "南ドイツ連邦"
+ SGR_confederation_DEF:0 "南ドイツ連邦"
+ SGR_united_republic:0 "南ドイツ連合共和国"
+ SGR_united_republic_DEF:0 "南ドイツ連合共和国"
+ 
  SIB_cossack_republic:0 "シベリア・コサック共和国"
  SIB_cossack_republic_DEF:0 "シベリア・コサック共和国"
  SIB_republic:0 "シベリア共和国"
@@ -1933,16 +1944,8 @@
  SIC_republic:0 "シチリア共和国"
  SIC_republic_DEF:0 "シチリア共和国"
  
- SGR_confederation:0 "南ドイツ連邦"
- SGR_confederation_DEF:0 "南ドイツ連邦"
- SGR_united_republic:0 "南ドイツ連合共和国"
- SGR_united_republic_DEF:0 "南ドイツ連合共和国"
- 
  SLA_kingdom:0 "スラボニア王国"
  SLA_kingdom_DEF:0 "スラボニア王国"
- 
- SEM_union:0 "サーミランド連合"
- SEM_union_DEF:0 "サーミランド連合"
  
  SMR_most_serene_republic:0 "晴朗極まる共和国サンマリノ"
  SMR_most_serene_republic_DEF:0 "晴朗極まる共和国サンマリノ"
@@ -1975,16 +1978,19 @@
  ZAP_republic:0 "ザポロージャ共和国"
  ZAP_republic_DEF:0 "ザポロージャ共和国"
  
-#アフリカ
+#アフリカ 
+ #SCZ:0 "スエズ運河地帯"
+ #SCZ_DEF:0 "スエズ運河地帯"
+ 
+ AMB_federal_republic:0 "アンバゾニア連邦共和国"
+ AMB_federal_republic_DEF:0 "アンバゾニア連邦共和国"
+ 
  ASH_empire:0 "アシャンティ帝国"
  ASH_empire_DEF:0 "アシャンティ帝国"
  ASH_kingdom:0 "アシャンティ王国"
  ASH_kingdom_DEF:0 "アシャンティ王国"
  ASH_republic:0 "アシャンティ共和国"
  ASH_republic_DEF:0 "アシャンティ共和国"
- 
- AMB_federal_republic:0 "アンバゾニア連邦共和国"
- AMB_federal_republic_DEF:0 "アンバゾニア連邦共和国"
  
  COM_federal_islamic_republic:0 "コモロ・イスラム連邦共和国"
  COM_federal_islamic_republic_DEF:0 "コモロ・イスラム連邦共和国"
@@ -2044,9 +2050,6 @@
  RIF_tribes_confederal_republic:0 "リーフ部族連合共和国"
  RIF_tribes_confederal_republic_DEF:0 "リーフ部族連合共和国"
  
- #SCZ:0 "スエズ運河地帯"
- #SCZ_DEF:0 "スエズ運河地帯"
- 
  SML_republic:0 "ソマリランド共和国"
  SML_republic_DEF:0 "ソマリランド共和国"
  SML_state:0 "ソマリランド国"
@@ -2081,12 +2084,15 @@
  WTG_republic:0 "西トーゴ共和国"
  WTG_republic_DEF:0 "西トーゴ共和国"
  
- ZAN_sultanate:0 "ザンジバル・スルタン国"
- ZAN_sultanate_DEF:0 "ザンジバル・スルタン国"
  ZAN_peoples_republic:0 "ザンジバル人民共和国"
  ZAN_peoples_republic_DEF:0 "ザンジバル人民共和国"
+ ZAN_sultanate:0 "ザンジバル・スルタン国"
+ ZAN_sultanate_DEF:0 "ザンジバル・スルタン国"
  
-#新大陸
+#新大陸 
+ #PCZ:0 "パナマ運河地帯"
+ #PCZ_DEF:0 "パナマ運河地帯"
+ 
  AGU_republic:0 "アンギラ共和国"
  AGU_republic_DEF:0 "アンギラ共和国"
  
@@ -2123,13 +2129,13 @@
  FKL_republic:0 "フォークランド共和国"
  FKL_republic_DEF:0 "フォークランド共和国"
  
- GRD_republic:0 "グレナダ共和国"
- GRD_republic_DEF:0 "グレナダ共和国"
- 
  GLA_anarchist_federation:0 "グレートレイクス・アナーキスト連盟"
  GLA_anarchist_federation_DEF:0 "グレートレイクス・アナーキスト連盟"
  GLA_united_republic:0 "グレートレイクス連合共和国"
  GLA_united_republic_DEF:0 "グレートレイクス連合共和国"
+ 
+ GRD_republic:0 "グレナダ共和国"
+ GRD_republic_DEF:0 "グレナダ共和国"
  
  GRL_republic:0 "グリーンランド共和国"
  GRL_republic_DEF:0 "グリーンランド共和国"
@@ -2148,9 +2154,6 @@
  
  NFL_republic:0 "ニューファンドランド共和国"
  NFL_republic_DEF:0 "ニューファンドランド共和国"
- 
- #PCZ:0 "パナマ運河地帯"
- #PCZ_DEF:0 "パナマ運河地帯"
  
  QEB_republic:0 "ケベック共和国"
  QEB_republic_DEF:0 "ケベック共和国"
@@ -2188,7 +2191,7 @@
  WIW_federation:0 "ウィンドワード連邦"
  WIW_federation_DEF:0 "ウィンドワード連邦"
  
-#大洋州
+#大洋州 
  CHR_republic:0 "クリスマス共和国"
  CHR_republic_DEF:0 "クリスマス共和国"
  
@@ -2242,7 +2245,7 @@
  VUT_republic:0 "バヌアツ共和国"
  VUT_republic_DEF:0 "バヌアツ共和国"
  
-#アメリカ合衆国
+#アメリカ諸州 
  ABA_republic:0 "アラバマ共和国"
  ABA_republic_DEF:0 "アラバマ共和国"
  
@@ -2398,4 +2401,3 @@
  
  WYO_republic:0 "ワイオミング共和国"
  WYO_republic_DEF:0 "ワイオミング共和国"
- 
