--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -19,11 +19,15 @@
  
  JAP_taimeikoka:0 "大命降下"
  
- JAP_selection_from_navy_candidates:0 "海軍から奏薦する"
+ JAP_Keisuke_Okada:0 "岡田啓介"
+ JAP_Mitsumasa_Yonai:0 "米内光政"
+ JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  
- JAP_no_selection_from_anywhere:0 "軍部との関わりを絶つ...？"
+ JAP_Fumimaro_Konoe:0 "近衛文麿"
  
- JAP_selection_from_army_candidates:0 "陸軍から奏薦する"
+ JAP_Kuniaki_Koiso:0 "小磯國昭"
+ JAP_Hisaichi_Terauchi:0 "寺内寿一"
+ JAP_Shunroku_Hata:0 "畑俊六"
  
  JAP_Japanese_Revolution:0 "日本革命"
  
