--- a/localisation/english/countries_new_continent/geacps_CSA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_CSA_l_english.yml
@@ -1,78 +1,78 @@
 ﻿l_english:
 #国家方針
- CSA_RZPSFEQB:0 "黄禍論"
- CSA_RZPSFEQB_desc:0 ""
- CSA_NRVbosYD:0 "アラスカを超えて"
- CSA_NRVbosYD_desc:0 ""
- CSA_AwpmTtaU:0 "武装蜂起"
- CSA_AwpmTtaU_desc:0 ""
- CSA_rWasvGqg:0 "合衆国は懲り懲りだ"
- CSA_rWasvGqg_desc:0 ""
- CSA_yTrGSokF:0 "奴隷法の再興"
- CSA_yTrGSokF_desc:0 ""
- CSA_GsRBmhWD:0 "強制労働所の建設"
- CSA_GsRBmhWD_desc:0 ""
- CSA_ViDBlNaK:0 "外国企業の資産を押収"
- CSA_ViDBlNaK_desc:0 ""
- CSA_gbyjZKUO:0 "証券取引所を破壊"
- CSA_gbyjZKUO_desc:0 ""
- CSA_OWuGCymz:0 "企業の国有化"
- CSA_OWuGCymz_desc:0 ""
- CSA_CURuNErw:0 "軍事経済"
- CSA_CURuNErw_desc:0 ""
- CSA_atObMjnH:0 "プランテーションを再開"
- CSA_atObMjnH_desc:0 ""
- CSA_bvpWSriq:0 "アメリカ統一に向けて"
- CSA_bvpWSriq_desc:0 ""
- CSA_FbjfnmUS:0 "テキサス併合"
- CSA_FbjfnmUS_desc:0 ""
- CSA_nJxLImiY:0 "ブルー作戦"
- CSA_nJxLImiY_desc:0 ""
- CSA_jTSABikR:0 "レッド作戦"
- CSA_jTSABikR_desc:0 ""
- CSA_TfgKPbwN:0 "西海岸を確保"
- CSA_TfgKPbwN_desc:0 ""
- CSA_UqGzjdfI:0 "新帝国との協力"
- CSA_UqGzjdfI_desc:0 ""
- CSA_ZBSnvGQc:0 "アメリカ至上主義"
- CSA_ZBSnvGQc_desc:0 ""
- CSA_qwifHNdI:0 "旧領を割譲"
- CSA_qwifHNdI_desc:0 ""
- CSA_wClHmZDA:0 "強制移住"
- CSA_wClHmZDA_desc:0 ""
- CSA_KaiHbAkL:0 "地方自治政府を攻撃"
- CSA_KaiHbAkL_desc:0 ""
- CSA_tQTczxNI:0 "共産主義者を処刑"
- CSA_tQTczxNI_desc:0 ""
- CSA_DJXTHatf:0 "二回目の正直"
- CSA_DJXTHatf_desc:0 ""
- CSA_osPwvaqi:0 "西欧同盟への加入"
- CSA_osPwvaqi_desc:0 ""
- CSA_yoNmBacQ:0 "戦争ビジネス"
- CSA_yoNmBacQ_desc:0 ""
- CSA_HtvzreRD:0 "二度目のパリ会議を"
- CSA_HtvzreRD_desc:0 ""
- CSA_KlJkBZSD:0 "アカを撃滅"
- CSA_KlJkBZSD_desc:0 ""
- CSA_htPNensM:0 "強大なロシアを再び"
- CSA_htPNensM_desc:0 ""
- CSA_GjmuxvBs:0 "今日の敵は明日の味方"
- CSA_GjmuxvBs_desc:0 ""
- CSA_RBWIbLOg:0 "強大なリーダーを確保"
- CSA_RBWIbLOg_desc:0 ""
- CSA_thgZvdxK:0 "アメリカ至上主義"
- CSA_thgZvdxK_desc:0 ""
- CSA_sKFILtJR:0 "基本的人権は存在せず"
- CSA_sKFILtJR_desc:0 ""
- CSA_ApfzSOGx:0 "南方生存権"
- CSA_ApfzSOGx_desc:0 ""
- CSA_CMUeSbJA:0 "奴隷法の強化"
- CSA_CMUeSbJA_desc:0 ""
- CSA_NzfrRWQI:0 "雪辱を晴らす"
- CSA_NzfrRWQI_desc:0 ""
- CSA_rgesSCfl:0 "最古の王朝を断絶"
- CSA_rgesSCfl_desc:0 ""
- CSA_zpSiubhl:0 "皇國の崩壊を防ぐ"
- CSA_zpSiubhl_desc:0 ""
- CSA_rBzfxidA:0 "支援の見返りを要求"
- CSA_rBzfxidA_desc:0 ""
+ CSA_yellow_peril_theory:0 "黄禍論"
+ CSA_yellow_peril_theory_desc:0 ""
+ CSA_beyond_ALS:0 "アラスカを超えて"
+ CSA_beyond_ALS_desc:0 ""
+ CSA_armed_uprising:0 "武装蜂起"
+ CSA_armed_uprising_desc:0 ""
+ CSA_done_with_USA:0 "合衆国は懲り懲りだ"
+ CSA_done_with_USA_desc:0 ""
+ CSA_revive_the_slave_law:0 "奴隷法の再興"
+ CSA_revive_the_slave_law_desc:0 ""
+ CSA_construct_forced_labor_camps:0 "強制労働所の建設"
+ CSA_construct_forced_labor_camps_desc:0 ""
+ CSA_cease_assets_of_foreign_companies:0 "外国企業の資産を押収"
+ CSA_cease_assets_of_foreign_companies_desc:0 ""
+ CSA_destroy_the_stock_exchange:0 "証券取引所を破壊"
+ CSA_destroy_the_stock_exchange_desc:0 ""
+ CSA_nationalize_the_industry:0 "企業の国有化"
+ CSA_nationalize_the_industry_desc:0 ""
+ CSA_military_economy:0 "軍事経済"
+ CSA_military_economy_desc:0 ""
+ CSA_resume_plantation:0 "プランテーションを再開"
+ CSA_resume_plantation_desc:0 ""
+ CSA_for_a_united_america:0 "アメリカ統一に向けて"
+ CSA_for_a_united_america_desc:0 ""
+ CSA_annex_TEX:0 "テキサス併合"
+ CSA_annex_TEX_desc:0 ""
+ CSA_operation_blue:0 "ブルー作戦"
+ CSA_operation_blue_desc:0 ""
+ CSA_operation_red:0 "レッド作戦"
+ CSA_operation_red_desc:0 ""
+ CSA_secure_the_west_coast:0 "西海岸を確保"
+ CSA_secure_the_west_coast_desc:0 ""
+ CSA_cooperate_with_the_new_empire:0 "新帝国との協力"
+ CSA_cooperate_with_the_new_empire_desc:0 ""
+ CSA_american_supremacy:0 "アメリカ至上主義"
+ CSA_american_supremacy_desc:0 ""
+ CSA_annex_former_territory:0 "旧領を割譲"
+ CSA_annex_former_territory_desc:0 ""
+ CSA_forced_emigration:0 "強制移住"
+ CSA_forced_emigration_desc:0 ""
+ CSA_attack_local_governments:0 "地方自治政府を攻撃"
+ CSA_attack_local_governments_desc:0 ""
+ CSA_hang_the_communists:0 "共産主義者を処刑"
+ CSA_hang_the_communists_desc:0 ""
+ CSA_second_times_the_charm:0 "二回目の正直"
+ CSA_second_times_the_charm_desc:0 ""
+ CSA_join_the_western_european_alliance:0 "西欧同盟への加入"
+ CSA_join_the_western_european_alliance_desc:0 ""
+ CSA_the_business_of_war:0 "戦争ビジネス"
+ CSA_the_business_of_war_desc:0 ""
+ CSA_the_second_paris_conference:0 "二度目のパリ会議を"
+ CSA_the_second_paris_conference_desc:0 ""
+ CSA_eliminate_the_reds:0 "アカを撃滅"
+ CSA_eliminate_the_reds_desc:0 ""
+ CSA_make_russia_great_again:0 "強大なロシアを再び"
+ CSA_make_russia_great_again_desc:0 ""
+ CSA_todays_enemy_is_tomorrows_friend:0 "今日の敵は明日の味方"
+ CSA_todays_enemy_is_tomorrows_friend_desc:0 ""
+ CSA_secure_a_strong_leader:0 "強大なリーダーを確保"
+ CSA_secure_a_strong_leader_desc:0 ""
+ CSA_american_supremacy_2:0 "アメリカ至上主義"
+ CSA_american_supremacy_2_desc:0 ""
+ CSA_there_is_no_such_thing_as_basic_human_rights:0 "基本的人権は存在せず"
+ CSA_there_is_no_such_thing_as_basic_human_rights_desc:0 ""
+ CSA_southern_lebensraum:0 "南方生存権"
+ CSA_southern_lebensraum_desc:0 ""
+ CSA_strengthen_the_slave_law:0 "奴隷法の強化"
+ CSA_strengthen_the_slave_law_desc:0 ""
+ CSA_make_up_for_lost_cause:0 "雪辱を晴らす"
+ CSA_make_up_for_lost_cause_desc:0 ""
+ CSA_abolish_the_oldest_empire:0 "最古の王朝を断絶"
+ CSA_abolish_the_oldest_empire_desc:0 ""
+ CSA_protect_the_empire_from_collapse:0 "皇國の崩壊を防ぐ"
+ CSA_protect_the_empire_from_collapse_desc:0 ""
+ CSA_demand_a_return_for_support:0 "支援の見返りを要求"
+ CSA_demand_a_return_for_support_desc:0 ""
