--- a/localisation/english/countries_new_continent/geacps_USA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_USA_l_english.yml
@@ -1,61 +1,61 @@
 ﻿l_english: 
 #focuses
-USA_rZfqVDun:0 "古の栄光"
-USA_rZfqVDun_desc:0 ""
-USA_FMkZhVSN:0 "国家安定法"
-USA_FMkZhVSN_desc:0 ""
-USA_ysSgGApJ:0 "国家治安維持法"
-USA_ysSgGApJ_desc:0 ""
-USA_NFthJBqV:0 "徹底抗戦"
-USA_NFthJBqV_desc:0 ""
-USA_NRCtnZud:0 "連邦政府の復古"
-USA_NRCtnZud_desc:0 ""
-USA_1947:0 "1947年臨時大統領選挙"
-USA_1947_desc:0 ""
-USA_YTNWeUmo:0 "シカゴ会議"
-USA_YTNWeUmo_desc:0 ""
-USA_LGmRryNu:0 "民間経済の復興"
-USA_LGmRryNu_desc:0 ""
-USA_GVtuUHzL:0 "第三次インディアン移住法"
-USA_GVtuUHzL_desc:0 ""
-USA_BPtVqWUN:0 "株式市場の２４時間運用"
-USA_BPtVqWUN_desc:0 ""
-USA_KUYDTjwM:0 "ワシントンを復興"
-USA_KUYDTjwM_desc:0 ""
-USA_ZisxIvRb:0 "投資家を歓迎"
-USA_ZisxIvRb_desc:0 ""
-USA_cjyeUuBT:0 "復興庁を設立"
-USA_cjyeUuBT_desc:0 ""
-USA_bBLarGUk:0 "世界の工場"
-USA_bBLarGUk_desc:0 ""
-USA_uMAqBOFS:0 "奨学金制度の拡充"
-USA_uMAqBOFS_desc:0 ""
-USA_mqkEHUue:0 "日米不干渉条約"
-USA_mqkEHUue_desc:0 ""
-USA_AvYGCQjJ:0 "アイルランドを保護"
-USA_AvYGCQjJ_desc:0 ""
-USA_TUGNPdYW:0 "大陸会議"
-USA_TUGNPdYW_desc:0 ""
-USA_dkqRVcNA:0 "独立心を煽る"
-USA_dkqRVcNA_desc:0 ""
-USA_kthqLbyc:0 "パリ会談"
-USA_kthqLbyc_desc:0 ""
-USA_NrYmEwLg:0 "我は不滅なり"
-USA_NrYmEwLg_desc:0 ""
-USA_TAjqDcBm:0 "日本を粉砕"
-USA_TAjqDcBm_desc:0 ""
-USA_KVkxutMl:0 "ダウンフォール作戦"
-USA_KVkxutMl_desc:0 ""
-USA_ArxNbIiK:0 "全体主義を禁止"
-USA_ArxNbIiK_desc:0 ""
-USA_eUKChxfE:0 "外交的解決"
-USA_eUKChxfE_desc:0 ""
-USA_pYXAQPKB:0 "軍事侵攻"
-USA_pYXAQPKB_desc:0 ""
-USA_EpikVWRw:0 "旧宗主国の打倒"
-USA_EpikVWRw_desc:0 ""
-USA_lGuKYiMp:0 "歴史的和解"
-USA_lGuKYiMp_desc:0 ""
+USA_our_past_glory:0 "古の栄光"
+USA_our_past_glory_desc:0 ""
+USA_national_stability_law:0 "国家安定法"
+USA_national_stability_law_desc:0 ""
+USA_national_security_law:0 "国家治安維持法"
+USA_national_security_law_desc:0 ""
+USA_all_out_resistance:0 "徹底抗戦"
+USA_all_out_resistance_desc:0 ""
+USA_restore_the_federal_government:0 "連邦政府の復古"
+USA_restore_the_federal_government_desc:0 ""
+USA_the_1947_special_presidential_election:0 "1947年臨時大統領選挙"
+USA_the_1947_special_presidential_election_desc:0 ""
+USA_the_chicago_convention:0 "シカゴ会議"
+USA_the_chicago_convention_desc:0 ""
+USA_rebuild_our_civilian_economy:0 "民間経済の復興"
+USA_rebuild_our_civilian_economy_desc:0 ""
+USA_the_3rd_indian_removal_act:0 "第三次インディアン移住法"
+USA_the_3rd_indian_removal_act_desc:0 ""
+USA_24_hour_stock_market_activity:0 "株式市場の２４時間運用"
+USA_24_hour_stock_market_activity_desc:0 ""
+USA_rebuild_washington_d_c:0 "ワシントンを復興"
+USA_rebuild_washington_d_c_desc:0 ""
+USA_welcome_the_investors:0 "投資家を歓迎"
+USA_welcome_the_investors_desc:0 ""
+USA_establish_the_reconstruction_agency:0 "復興庁を設立"
+USA_establish_the_reconstruction_agency_desc:0 ""
+USA_factory_of_the_world:0 "世界の工場"
+USA_factory_of_the_world_desc:0 ""
+USA_expand_the_scholarship_system:0 "奨学金制度の拡充"
+USA_expand_the_scholarship_system_desc:0 ""
+USA_JAP_non_intervention_treaty:0 "日米不干渉条約"
+USA_JAP_non_intervention_treaty_desc:0 ""
+USA_protect_IRE:0 "アイルランドを保護"
+USA_protect_IRE_desc:0 ""
+USA_the_continental_congress:0 "大陸会議"
+USA_the_continental_congress_desc:0 ""
+USA_spread_the_ideal_of_independence:0 "独立心を煽る"
+USA_spread_the_ideal_of_independence_desc:0 ""
+USA_the_paris_conference:0 "パリ会談"
+USA_the_paris_conference_desc:0 ""
+USA_we_are_invincible:0 "我は不滅なり"
+USA_we_are_invincible_desc:0 ""
+USA_crush_JAP:0 "日本を粉砕"
+USA_crush_JAP_desc:0 ""
+USA_operation_downfall:0 "ダウンフォール作戦"
+USA_operation_downfall_desc:0 ""
+USA_ban_totalitarianism:0 "全体主義を禁止"
+USA_ban_totalitarianism_desc:0 ""
+USA_diplomatic_solution:0 "外交的解決"
+USA_diplomatic_solution_desc:0 ""
+USA_military_invasion:0 "軍事侵攻"
+USA_military_invasion_desc:0 ""
+USA_overthrow_our_former_master:0 "旧宗主国の打倒"
+USA_overthrow_our_former_master_desc:0 ""
+USA_historical_compromise:0 "歴史的和解"
+USA_historical_compromise_desc:0 ""
 
 #idea
  USA_sour_loser:0 "苦い敗北"
