--- a/localisation/english/geacps_BRA_l_english.yml
+++ b/localisation/english/geacps_BRA_l_english.yml
@@ -30,4 +30,16 @@
  BRA_air_assault:0 "空からの強襲"
 
 #国民精神
+ BRA_the_aslte_programme:0 "ASLTE計画"
+ BRA_gambling_decriminalisation:0 "ギャンブル非合法化"
+ 
+#企業
+ BRA_petrobras:0 "ペトロブラス"
+ 
 #イベント
+ BRA.1.t:0 "ASLTE計画-発動"
+ BRA.1.d:0 "この計画は国土のインフラ整備、医療整備、食品やエネルギーの発展を促進させ、刺激することにより経済の活性化させるとともに国民の生活水準を底上げすることを念頭においたものである。計画に沿って最終的には空海軍の改革も行われることだろう。"
+ BRA.1.0:0 "エネルギー独立を！"
+ BRA.2.t:0 "ASLTE計画-最終段階"
+ BRA.2.d:0 "この計画により国民の生活は豊かになり、石油産業の革新を行うことができた。残すは空海軍の改革のみとなり、計画に沿って順調に改革は完了するだろう。"
+ BRA.2.0:0 "計画の完遂を！" 
