--- a/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
@@ -34,7 +34,7 @@
  BRA_gambling_decriminalisation:0 "ギャンブル非合法化"
  
 #企業
- BRA_petrobras:0 "ペトロブラス"
+ BRA_petrobras:0 "ブラジル石油公社\nペトロブラス"
  
 #イベント
  BRA.1.t:0 "ASLTE計画-発動"
@@ -42,4 +42,7 @@
  BRA.1.0:0 "エネルギー独立を！"
  BRA.2.t:0 "ASLTE計画-最終段階"
  BRA.2.d:0 "この計画により国民の生活は豊かになり、石油産業の革新を行うことができた。残すは空海軍の改革のみとなり、計画に沿って順調に改革は完了するだろう。"
- BRA.2.0:0 "計画の完遂を！" 
+ BRA.2.0:0 "計画の完遂を！"
+ 
+#ツールチップ
+ BRA_establish_petrobras:0 "ペトロブラスを設立する"
