--- a/localisation/english/generic/_geacps_parties_l_english.yml
+++ b/localisation/english/generic/_geacps_parties_l_english.yml
@@ -150,6 +150,10 @@
  PARTY_syndicalist_popular_party:0 "サンディカリズム大衆党"
  PARTY_syndicalist_popular_party_long:0 "サンディカリズム大衆党"
  
+#COL-コロンビア
+ PARTY_los_leoparades:0 "ロス・レオパレード"
+ PARTY_los_leoparades_long:0 "ロス・レオパレード"
+ 
 #CAN-カナダ
  PARTY_bloc_populaire_canadien:0 "人民ブロック"
  PARTY_bloc_populaire_canadien_long:0 "カナダ人民ブロック"
