--- a/localisation/english/_map/_geacps_factions_l_english.yml
+++ b/localisation/english/_map/_geacps_factions_l_english.yml
@@ -9,6 +9,7 @@
 #追加陣営
  ANTI-JAPANESE_NATIONAL_UNITED_FRONT:0 "抗日民族統一戦線"
  MONROE_LEAGUE:0 "モンロー連盟"
+ NUEVA_ANDALUCA:0 "ヌエバ・アンダルシア"
  
  #COMMONWEALTH_OF_INDEPENDENT_STATES:0 "独立国家共同体"
  #EURASIAN_ECONOMIC_UNION:0 "ユーラシア連合"
