--- a/localisation/english/countries_new_continent/geacps_CHL_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_CHL_l_english.yml
@@ -44,10 +44,11 @@
  CHL.3.d:0 "この法は、共産党登録取り消しを規定しており、過激派は選挙登録簿から消された。さらに、すべての組織、宣伝、および同様の団体は禁止され、生産活動の通常の発展を妨げるすべての集会または行為は制裁対象となった。"
  CHL.3.0:0 "アカどもを政府に入れるな！"
  CHL.4.t:0 "セレナ計画の始動"
- CHL.4.d:0 ""
+ CHL.4.d:0 "サンティアゴに巨大都市を形成し、その人口も増加させる計画は、国家の持つ資本を集中し、高層ビルを含めた公共建設事業を加速させることを念頭に置いていた。事実上すべての機関が中央集権化され、政治、行政等の各問題に対する対処が決定され、芸術や娯楽といった精神的な楽しみさえも独占し、地方からの移民によって偏向的な繁栄を得ている首都の魅力と眩しさは多くのチリ国民に理解されている。
+チリの全州でこの計画を実行することは不可能であるため、各行政機関が1つの州を対象として計画を実行することとなった。この基準が国民生活の間に適用された場合、未来のチリは首都への人工集中に悩まされることはなく、その代わりに州都と各州の繁栄を享受することになるだろう。"
  CHL.4.0:0 "一極集中を終わらせろ！"
  CHL.5.t:0 "農地改革"
- CHL.5.d:0 ""
+ CHL.5.d:0 "地主から土地の所有権を農民へ組み入れ、農民の生活レベルを引き上げることで、農業生産性の向上、水道システムの改革、農業関連の公的機関の再編の達成を目標とした。この計画ではこれらの目標に加え、効率的な土地の再分配を行うために農業改革法と農民連合法が制定され、灌漑用に一人あたり最大80ヘクタールの面積を約束した。"
  CHL.5.0:0 "経済的格差を是正せよ！"
  CHL.6.t:0 "都市開発および再開発"
  CHL.6.d:0 "現在、我が国では首都に人口が集中しつつあり、地方との格差拡大とさらなる貧困を生み出す恐れがある。地方都市を首都の如く開発を行うことによって、首都への一極集中を抑えることができるだろう。"
