--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -24,6 +24,25 @@
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  
  JAP_Fumimaro_Konoe:0 "近衛文麿"
+ JAP_Konoe_Doctrine:0 "近衛ドクトリン"
+ JAP_relationship_with_Sick_man_of_Europe:0 "ヨーロッパの病人との関係"
+ JAP_support_in_Falklands_War:0 "フォークランド紛争でアルゼンチンを支持"
+ JAP_Malayan_Emergency:0 "マラヤ危機"
+ JAP_support_for_Malayan_National_Liberation_Army:0 "マラヤ人民抗英軍を支援"
+ JAP_training_for_Defenders_of_the_Homeland:0 "郷土防衛義勇軍を訓練"
+ JAP_Nanshin-ron:0 "南進論"
+ JAP_relationship_with_Sick_Free_State:0 "瀕死の自由の国との関係"
+ JAP_relationship_with_The_empire_on_which_the_sun_never_sets:0 "かつての太陽の沈まない国との関係"
+ JAP_Handover_of_East_Timor:0 "東ティモール返還"
+ JAP_impact_on_alaska:0 "アラスカへの影響"
+ JAP_impact_on_california:0 "カリフォルニアへの影響"
+ JAP_Toshin-ron:0 "東進論"
+ JAP_relationship_with_fallen_Red_star:0 "堕ちた赤い星との関係"
+ JAP_eliminating_threat_of_Siberia:0 "シベリアの脅威を排除"
+ JAP_support_for_cossacks_in_far_east:0 "極東のコサックを支援"
+ JAP_Baikal–Amur_Mainline:0 "バイカル・アムール鉄道"
+ JAP_Hokushin-ron:0 "北進論"
+ JAP_reject_the_Anglo-American_and_Russian_centered_p:0 "英米ソ本位の平和主義を排す"
  
  JAP_Kuniaki_Koiso:0 "小磯國昭"
  JAP_Hisaichi_Terauchi:0 "寺内寿一"
@@ -230,8 +249,8 @@
  GEACPS_NF_JAP_navy_19:0 ""
 
 #国民精神
- JAP_high_defence_state_system:0 "高度国防国家体制"
- JAP_high_defence_state_system_desc:0 "”この秋に当り世界情勢に即応しつつ能く支那事変の処理を完遂すると共に、進んで世界新秩序の建設に指導的役割を果す為には、国家国民の総力を最高度に発揮してこの大事業に集中し如何なる事態が発生するとも独自の立場に於て迅速果敢且有効適切に之に対処し得るやう高度国防国家の体制へ整へねばならぬ。”"
+ JAP_victory_of_Pacific_War:0 "大東亜戦争に勝利"
+ JAP_victory_of_Pacific_War_desc:0 ""
  JAP_privy_council:0 "枢密院"
  JAP_privy_council_desc:0 "枢密院は、枢密顧問により組織される天皇の諮問機関。"
  JAP_planning_institute:0 "企画院"
