--- a/localisation/english/generic/_geacps_characters_l_english.yml
+++ b/localisation/english/generic/_geacps_characters_l_english.yml
@@ -89,7 +89,7 @@
  CHARACTER_hisaichi_terauchi:0 "寺内寿一"
  CHARACTER_hitoshi_imamura:0 "今村均"
  CHARACTER_hitoshi_imamura_desc:0 "インドネシア占領地司令官"
- CHARACTER_kisaburo_ando:0 "安藤喜三郎"
+ CHARACTER_kisaburo_ando:0 "安藤紀三郎"
  CHARACTER_kuniaki_koiso:0 "小磯国昭"
  CHARACTER_nobuyoshi_muto:0 "武藤信義"
  CHARACTER_nobuyuki_abe:0 "阿部信行"
