--- a/localisation/english/generic/_geacps_music_l_english.yml
+++ b/localisation/english/generic/_geacps_music_l_english.yml
@@ -20,7 +20,7 @@
  Hijos_del_Pueblo:0 "Hijos del Pueblo"
  
 #ja-日本語
- JAP_music_album:0 "日本放送協会"
+ JAP_music_album_TITLE:0 "日本放送協会"
  Aiba_Shingunka:0 "愛馬進軍歌"
  Hotaru_No_Hikari:0 "蛍の光"
  Indonesia_Raya:0 "インドネシア・ラヤ"
