--- a/localisation/english/generic/_geacps_music_l_english.yml
+++ b/localisation/english/generic/_geacps_music_l_english.yml
@@ -34,6 +34,7 @@
  Koshinkyoku_Yuki_No_Shingun:0 "行進曲「雪の進軍」"
  Taiheiyou_Koshinkyoku:0 "太平洋行進曲"
  Rikugun_Bunretsu_Koshinkyoku:0 "陸軍分列行進曲"
+ Warera:0 "われら"
  
 #sco-スコットランド語
  Auld_Lang_Syne:0 "Auld Lang Syne"
