--- a/localisation/english/generic/_geacps_parties_l_english.yml
+++ b/localisation/english/generic/_geacps_parties_l_english.yml
@@ -64,6 +64,8 @@
 #JAP-日本
  PARTY_imperial_rule_assistance_association:0 "大政翼賛会"
  PARTY_imperial_rule_assistance_association_long:0 "大政翼賛会"
+ PARTY_greater_japan_party:0 "大日本党"
+ PARTY_greater_japan_party_long:0 "大日本党"
  
 #KOR-朝鮮
  PARTY_choson_government-general:0 "朝鮮総督府"
