--- a/localisation/english/temporary/geacps_JAP_l_english.yml
+++ b/localisation/english/temporary/geacps_JAP_l_english.yml
@@ -33,37 +33,16 @@
  JAP_Nanshin-ron:0 "南進論"
  JAP_relationship_with_Sick_Free_State:0 "瀕死の自由の国との関係"
  JAP_relationship_with_The_empire_on_which_the_sun_never_sets:0 "かつての太陽の沈まない国との関係"
- JAP_handover_of_East_Timor:0 "東ティモール返還"
+ JAP_Handover_of_East_Timor:0 "東ティモール返還"
  JAP_impact_on_alaska:0 "アラスカへの影響"
  JAP_impact_on_california:0 "カリフォルニアへの影響"
  JAP_Toshin-ron:0 "東進論"
  JAP_relationship_with_fallen_Red_star:0 "堕ちた赤い星との関係"
  JAP_eliminating_threat_of_Siberia:0 "シベリアの脅威を排除"
  JAP_support_for_cossacks_in_far_east:0 "極東のコサックを支援"
- JAP_Baikal-Amur_Mainline:0 "バム鉄道"
+ JAP_Baikal–Amur_Mainline:0 "バイカル・アムール鉄道"
  JAP_Hokushin-ron:0 "北進論"
- JAP_reject_the_Anglo-American_and_Russian_centered_peace:0 "英米ソ本位の平和主義を排す"
- JAP_appointment_reform_bureaucrats:0 "革新官僚を任命"
- JAP_cooperation_with_Kodoha:0 "皇道派と協力"
- JAP_coup:0 "國家に対する打撃"
- JAP_stop_Meiji_Constitution:0 "憲法を停止"
- JAP_dissolution_of_both_parliament:0 "両院を解散"
- JAP_martial_law_of_all_prefectures:0 "全國に戒厳令を！"
- JAP_start_of_Showa_Ishin:0 "昭和維新を開始"
- JAP_removal_of_upper_class:0 "特権階級を排除"
- JAP_Greater_Japan_Party:0 "大日本党"
- JAP_acceleration_of_Shintaisei:0 "新体制運動を加速"
- JAP_acceleration_of_Shintaisei_in_territories_acquired:0 "外地の新体制運動を加速"
- JAP_East_Asia_bloc_economies:0 "東亜経済ブロック"
- JAP_basu_ni_nori_okureru_na:0 "バスに乗り遅れるな！"
- JAP_abolition_of_private_property:0 "私有財産制の廃止...？"
- JAP_competition_with_imperialism_great_powers:0 "帝國主義列強との競争"
- JAP_cooperation_with_Toseiha:0 "統制派と協力"
- JAP_A:0 "A"
- JAP_destiny_of_Kodoha:0 "皇道派の命運"
- JAP_B:0 "B"
- JAP_high_defence_state:0 "高度国防国家"
- JAP_appointment_reform_bureaucrats:0 "革新官僚を任命"
+ JAP_reject_the_Anglo-American_and_Russian_centered_p:0 "英米ソ本位の平和主義を排す"
  
  JAP_Kuniaki_Koiso:0 "小磯國昭"
  JAP_Hisaichi_Terauchi:0 "寺内寿一"
@@ -76,6 +55,141 @@
  JAP_Capture_of_Wuhan:0 "武漢作戦"
  JAP_Capture_of_Chongqing:0 "重慶作戦"
  JAP_triumphant:0 "凱旋だ！"
+ 
+ JAP_Keisuke_Okada:0 "岡田啓介"
+ JAP_1:0 ""
+ JAP_2:0 ""
+ JAP_3:0 ""
+ JAP_4:0 ""
+ JAP_5:0 ""
+ JAP_Treaty_of_Mutual_Cooperation_and_Security_Between_the_United_States_and_Japan:0 "日本國及米國間相互協力及安全保障条約"
+ JAP_Mitsumasa_Yonai:0 "米内光政"
+ JAP_Yonai_Diplomacy:0 "米内外交"
+ JAP_Red_Empire:0 "赤い帝國"
+ JAP_Relations_with_Eastern_countries:0 "東側諸国との関係"
+ JAP_Treaty_of_Friendship_and_Mutual_Assistance_between_the_Soviet_Union_and_Japan:0 "日本國及ソヴイエト連邦間ノ友好、同盟及相互援助条約"
+ JAP_Arita-Molotov_Agreement:0 "有田・モロトフ協定"
+ JAP_Thawing:0 "雪解け"
+ JAP_The_Soviet-Japanese_Alliance:0 "ユーラシア枢軸国"
+ JAP_Breakwater_against_the_red:0 "赤に対する防波堤"
+ JAP_Freedom_to_light_up_West_Africa:0 "西比利亜を照らす自由"
+ JAP_Cooperation_with_Western_countries:0 "西側諸国との協力"
+ JAP_Support_for_the_Siberian_Autonomous_Regiment:0 "西比利亜自治團の支援"
+ JAP_Sending_an_independent_garrison:0 "独立守備隊を派遣"
+ JAP_Investment_in_the_Heilongjiang_Railway_Kaji_Lake:0 "貝加爾湖・黒龍江鉄道に投資"
+ JAP_Investment_in_Ussuri_Railway:0 "烏蘇里鉄道に投資"
+ JAP_Extension_of_the_Heilongjiang_Railway_to_Lake_Kaijia:0 "貝加爾湖・黒龍江鉄道の延伸"
+ JAP_Friendship_with_Siberia:0 "日西共栄"
+ JAP_Cossack_Country:0 "コサックの國"
+ JAP_Support_for_Ataman:0 "アタマンの支援"
+ JAP_Dispatch_of_military_advisers:0 "軍事顧問団の派遣"
+ JAP_Friendship_with_Chita:0 "日知共栄"
+ JAP_A_true_peace-lover:0 "真の平和愛好者"
+ JAP_Naval_Conscience:0 "海軍の良識派"
+ JAP_Retaliation_for_big_angle_appointments:0 "大角人事の報復"
+ JAP_The_return_of_the_leftist_trio:0 "左派トリオの復活"
+ JAP_Guardians_of_the_Pacific:0 "太平洋の守護者"
+ JAP_Abolition_of_the_active_military_service_system_of_the_Minister_of_War:0 "軍部大臣現役武官制の廃止"
+ JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
+ JAP_Resolution_of_the_question_of_the_drought_of_the_Admiralty:0 "統帥権干犯問題の解決...?"
+ JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
+ JAP_Suzuki_Diplomacy:0 "鈴木外交"
+ JAP_The_greatest_jewel_in_the_crown_of_an_English_king:0 "英國國王の王冠にはめ込まれた最大の宝石"
+ JAP_Joint_exercises_with_British_and_Indian_forces:0 "英印軍との合同演習"
+ JAP_Signing_of_the_India-Japan_Trade_Agreement:0 "日印貿易協定の締結"
+ JAP_A_free_and_open_Indian_Ocean:0 "自由で開かれた印度洋"
+ JAP_And_another_land_where_the_sun_never_sets:0 "そしてもう一つの太陽の沈まぬ國"
+ JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_British_Malaya_Tin:0 "英領マラヤの錫"
+ JAP_Establishment_of_the_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所の設立"
+ JAP_Establishment_of_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会の設置"
+ JAP_Joint_exercises_with_the_Royal_Navy:0 "英國海軍との合同演習"
+ JAP_The_Pacific_Ocean_is_as_the_name_suggests_an_ocean_of_peace:0 "太平洋は名の如く平和の洋"
+ JAP_Relationship_with_Australasia:0 "オーストララシアとの関係"
+ JAP_Conclusion_of_the_Pacific_Security_Treaty:0 "太平洋安全保障条約の締結"
+ JAP_A_free_and_open_Pacific:0 "自由で開かれた太平洋"
+ JAP_Investment_in_Kanada_Pacific_Railway:0 "加奈陀太平洋鉄道へ投資"
+ JAP_The_Fourth_Japanese-British_Alliance:0 "第四次日英同盟"
+ JAP_Exclusion_of_hawkers:0 "鷹派の排除"
+ JAP_Suzuki_and_Anan:0 "鈴木と阿南"
+ JAP_Implementation_of_civilian_control:0 "文民統制の実施"
+ JAP_Hedgehog_Defence_Theory:0 "針鼠防衛論"
+ JAP_Anti-communist_JAPwark:0 "反共の防波堤"
+ JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
+ JAP_Towa_No_Heiwa:0 "永遠の平和"
+ JAP_Start_of_liberalisation:0 "自由化の開始"
+ JAP_Women's_suffrage:0 "婦人参政権"
+ JAP_Repeal_of_oppressive_legislation:0 "圧政的な法制度の撤廃"
+ JAP_Democratisation_of_the_economy:0 "経済の民主化"
+ JAP_Enactment_of_trade_union_law:0 "労働組合法の制定"
+ JAP_Agricultural_Land_Reform:0 "農地改革"
+ JAP_Education_Reform:0 "教育改革"
+ JAP_The_liberal_states_of_the_East:0 "東洋の自由主義國家"
+ JAP_Democracy:0 "民主主義"
+ JAP_Minpon_Shugi:0 "民本主義"
+ JAP_Fumimaro_Konoe:0 "近衛文麿"
+ JAP_Konoe_Diplomacy:0 "近衛外交"
+ JAP_Our_relationship_with_the_sick_in_Europe:0 "ヨーロッパの病人との関係"
+ JAP_Argentina's_support_in_the_Falkland_Islands_dispute:0 "フォークランド諸島問題におけるアルゼンチンの支持"
+ JAP_The_Malayan_problem:0 "マラヤ問題"
+ JAP_Support_for_the_Malayan_People's_Anti-British_Army:0 "マラヤ人民抗英軍の支援"
+ JAP_Education_for_the_Borneo_Volunteer_Army:0 "ボルネオ義勇軍の教育"
+ JAP_The_Southern_Approach:0 "南進論"
+ JAP_Our_relationship_with_the_collapsed_free_world:0 "崩壊した自由の國との関係"
+ JAP_Ban_on_the_use_of_Spanish_in_the_Philippines_revoked:0 "比島でのスペイン語の使用の禁止を撤回"
+ JAP_Timor_return:0 "ティモール返還"
+ JAP_Alaska_heights_expand:0 "アラスカへ影響力拡大"
+ JAP_Extension_of_influence_in_Californian:0 "加利福尼亜へ影響力拡大"
+ JAP_Eastern_Progressive_Theory:0 "東進論"
+ JAP_The_relationship_with_the_missing_red_star:0 "欠けた赤い星との関係"
+ JAP_Eliminating_the_threat_of_Siberia:0 "シベリアの脅威を排除"
+ JAP_Supporting_Cossacks_in_the_Far_East:0 "極東のコサックを支援"
+ JAP_Baikal–Amur_Mainline:0 "バム鉄道"
+ JAP_The_North_Advancement_Theory:0 "北進論"
+ JAP_No_more_Anglo-American_and_Soviet-oriented_imperialism:0 "英米ソ本位の帝國主義を排す"
+ JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
+ JAP_Cooperation_of_the_Imperialists:0 "皇道派の協力"
+ JAP_A_blow_to_the_nation:0 "國家に対する打撃"
+ JAP_Suspension_of_the_Constitution:0 "憲法の停止"
+ JAP_Dissolution_of_both_Houses:0 "両院を解散"
+ JAP_Martial_law_throughout_the_country:0 "全國での戒嚴令"
+ JAP_Start_of_the_Showa_Restoration:0 "昭和維新を開始"
+ JAP_Elimination_of_the_privileged_class:0 "特権階級の排除"
+ JAP_Formation_of_Konoe_New_Party:0 "近衛新党を結成"#大日本党
+ JAP_Re-acceleration_of_the_new_regime_movement:0 "新体制運動を再加速"
+ JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動を加速"
+ JAP_Building_the_Pacific_Economic_Bloc:0 "太平洋経済ブロックの構築"
+ JAP_Don't_miss_the_bus:0 "バスに乗り遅れるな"
+ JAP_Abolition_of_the_private_property_system:0 "私有財産制の廃止"
+ JAP_Competition_with_the_imperialist_powers:0 "帝國主義列強との競争"
+ JAP_Cooperation_of_control_groups:0 "統制派の協力"
+ JAP_Establishment_of_Greater_East_Asia_Common_Economic_Area:0 "大東亜共同経済圏を確立"
+ JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
+ JAP_Response_to_total_war:0 "総力戦への対応"
+ JAP_Dominate_the_continent:0 "大陸を支配せよ!"
+ JAP_Kuniaki_Koiso:0 "小磯國昭"
+ JAP_Nae_Seon_Il_Che:0 "内鮮一体"
+ JAP_Bringing_the_peninsula_inland:0 "半島を内地に"
+ JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
+ JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
+ JAP_Fujian_is_Japan's_lifeline:0 "福建は日本の生命線"
+ JAP_Opposite_shore_management:0 "対岸経営"
+ JAP_Sanwu_Corporation:0 "三五公司"
+ JAP_The_Koiso-Yonai_coalition_cabinet:0 "小磯・米内連立内閣"
+ JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
+ JAP_Hisaichi_Terauchi:0 "寺内寿一"
+ JAP_Royalization_Movement:0 "皇民化運動"
+ JAP_11:0 ""
+ JAP_12:0 ""
+ JAP_13:0 ""
+ JAP_14:0 ""
+ JAP_Construction_of_the_East_Asia_Cooperative:0 "東亜協同体の建設"
+ JAP_Shunroku_Hata:0 "畑俊六"
+ JAP_15:0 ""
+ JAP_16:0 ""
+ JAP_17:0 ""
+ JAP_Ichichu_duo:0 "一中コンビ"
+ JAP_18:0 ""
 
 #国家方針
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
