イギリス・アメリカ・ブラジルステート分割、カナダ人口調整

--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -118,23 +118,23 @@
  STATE_117:0 "カンパニア"
  STATE_118:0 "ジブラルタル"
  STATE_119:0 "アイルランド北部"
- STATE_120:0 "高地と島々"
- STATE_121:0 "イースト・スコットランド"
+ STATE_120:0 "ハイランド"
+ STATE_121:0 "東スコットランド"
  STATE_122:0 "ウェールズ"
- STATE_123:0 "サウス・ウェスト・イングランド"
+ STATE_123:0 "コーンウォール"
  STATE_124:0 "ゴットランド"
- STATE_125:0 "イースト・オブ・イングランド"
+ STATE_125:0 "東イングランド"
  STATE_126:0 "カンブリア"
- STATE_127:0 "サウス・イースト・イングランド"
- STATE_128:0 "ウェスト・ミッドランズ"
- STATE_129:0 "イースト・ミッドランズ"
- STATE_130:0 "ヨークシャー・アンド・ザ・ハンバー"
- STATE_131:0 "ノース・イースト・イングランド"
- STATE_132:0 "ノース・ウェスト・イングランド"
- STATE_133:0 "サウス・ウェスト・スコットランド"
+ STATE_127:0 "南東イングランド"
+ STATE_128:0 "西ミッドランズ"
+ STATE_129:0 "東ミッドランズ"
+ STATE_130:0 "ヨークシャー"
+ STATE_131:0 "北東イングランド"
+ STATE_132:0 "北西イングランド"
+ STATE_133:0 "南西スコットランド"
  STATE_134:0 "コノート"
  STATE_135:0 "マンスター"
- STATE_136:0 "ノース・イースト・スコットランド"
+ STATE_136:0 "北東スコットランド"
  STATE_137:0 "クリミア"
  STATE_138:0 "スコーネ"
  STATE_139:0 "スモーランド"
@@ -986,7 +986,7 @@
  STATE_985:0 "黔南"
  STATE_986:0 "奄美群島"
  STATE_987:0 "パリ"
- STATE_988:0 "グレーター・ロンドン"
+ STATE_988:0 "大ロンドン"
  STATE_989:0 "コロンビア特別区"
  STATE_990:0 "モスクワ市"
  STATE_991:0 "ベルリン西部"
@@ -1360,3 +1360,25 @@
  STATE_1359:0 "ケイマン諸島"
  STATE_1360:0 "トレンティーノ"
  STATE_1361:0 "イングーシ"
+ STATE_1362:0 "マヨット島"
+ STATE_1363:0 "アジャリア"
+ STATE_1364:0 "カンタブリア"
+ STATE_1365:0 "ラ・リオハ"
+ STATE_1366:0 "ロンドニア"
+ STATE_1367:0 "ロライマ"
+ STATE_1368:0 "アマパ"
+ STATE_1369:0 "トカンティンス"
+ STATE_1370:0 "パラー"
+ STATE_1371:0 "パラナ"
+ STATE_1372:0 "エスピリト・サント"
+ STATE_1373:0 "ピアウイ"
+ STATE_1374:0 "セルジッペ"
+ STATE_1375:0 "セアラー"
+ STATE_1376:0 "パライバ"
+ STATE_1377:0 "ペルナンブコ"
+ STATE_1378:0 "アラゴアス"
+ STATE_1379:0 "プリンス・エドワード島"
+ STATE_1380:0 "スペリオル"
+ STATE_1381:0 "シェトランド諸島"
+ STATE_1382:0 "ヘブリディーズ諸島"
+ STATE_1383:0 "南西イングランド"
