--- a/localisation/english/_map/_geacps_state_names_native_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_native_l_english.yml
@@ -445,3 +445,5 @@
  STATE_1331_pl:0 "ウェムコフシュチュィズナ"
  STATE_1348_ja:0 "東沖島"
  STATE_1360_fr:0 "トレンティン"
+ STATE_1379_en:0 "プリンス・エドワード・アイランド"
+ STATE_1379_fr:0 "イル・サン＝ジャン"
