--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -40,7 +40,7 @@
  JAP_relationship_with_fallen_Red_star:0 "堕ちた赤い星との関係"
  JAP_eliminating_threat_of_Siberia:0 "シベリアの脅威を排除"
  JAP_support_for_cossacks_in_far_east:0 "極東のコサックを支援"
- JAP_Baikal–Amur_Mainline:0 "バイカル・アムール鉄道"
+ JAP_Baikal-Amur_Mainline:0 "バイカル・アムール鉄道"
  JAP_Hokushin-ron:0 "北進論"
  JAP_reject_the_Anglo-American_and_Russian_centered_p:0 "英米ソ本位の平和主義を排す"
  
