オスマン中東曲線と分裂セルビア人の土地

--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -289,9 +289,9 @@
  STATE_288:0 "マンダレー"
  STATE_289:0 "タイ中部"
  STATE_290:0 "モロッコ北部"
- STATE_291:0 "バグダード"
+ STATE_291:0 "メソポタミア"
  STATE_292:0 "ナジュド"
- STATE_293:0 "イエメン"
+ STATE_293:0 "北イエメン西部"
  STATE_294:0 "オマーン"
  STATE_295:0 "レオポルドヴィル"
  STATE_296:0 "ギニア・ビサウ"
@@ -419,7 +419,7 @@
  STATE_418:0 "サムナーン"
  STATE_419:0 "タブリーズ"
  STATE_420:0 "ギーラーン"
- STATE_421:0 "クルディスタン"
+ STATE_421:0 "コルデスターン"
  STATE_422:0 "セイロン島西部"
  STATE_423:0 "タミル・ナードゥ"
  STATE_424:0 "アーンドラ・プラデーシュ"
@@ -453,7 +453,7 @@
  STATE_452:0 "マトルーフ"
  STATE_453:0 "シナイ"
  STATE_454:0 "パレスチナ"
- STATE_455:0 "ヨルダン"
+ STATE_455:0 "ヨルダン西部"
  STATE_456:0 "上エジプト"
  STATE_457:0 "紅海沿岸"
  STATE_458:0 "チュニジア"
@@ -552,7 +552,7 @@
  STATE_551:0 "ハルツーム"
  STATE_552:0 "西部砂漠"
  STATE_553:0 "レバノン"
- STATE_554:0 "ダマスカス"
+ STATE_554:0 "ダマスカス西部"
  STATE_555:0 "小千島列島"
  STATE_556:0 "マリ"
  STATE_557:0 "モーリタニア"
@@ -657,7 +657,7 @@
  STATE_656:0 "クウェート"
  STATE_657:0 "ウラジオストク"
  STATE_658:0 "アブダビ"
- STATE_659:0 "アデン"
+ STATE_659:0 "南イエメン西部"
  STATE_660:0 "赤道アフリカ"
  STATE_661:0 "トリポリタニア"
  STATE_662:0 "スルト"
@@ -673,8 +673,8 @@
  STATE_672:0 "北スマトラ"
  STATE_673:0 "中部スラウェシ"
  STATE_674:0 "中央オーストラリア"
- STATE_675:0 "アル・ハジャラ"
- STATE_676:0 "モースル"
+ STATE_675:0 "イラク砂漠"
+ STATE_676:0 "アル・ジャジーラ"
  STATE_677:0 "アレッポ"
  STATE_678:0 "ルブアルハリ"
  STATE_679:0 "ヒジャーズ"
@@ -802,7 +802,7 @@
  STATE_801:0 "モエシア"
  STATE_802:0 "コソボ"
  STATE_803:0 "セルビア南部"
- STATE_804:0 "ヘルツェゴビナ"
+ STATE_804:0 "ヘルツェゴビナ西部"
  STATE_805:0 "エピルス北部"
  STATE_806:0 "アルプ＝マリティーム"
  STATE_807:0 "ポモージェ"
@@ -1129,8 +1129,8 @@
  STATE_1128:0 "ピブーンソンクラーム"
  STATE_1129:0 "プリアヴィヒア北部"
  STATE_1130:0 "ムーンラパモーク"
- STATE_1131:0 "ダルマチア"
- STATE_1132:0 "スラボニア"
+ STATE_1131:0 "ダルマチア南部"
+ STATE_1132:0 "スラボニア中部"
  STATE_1133:0 "南ホラント"
  STATE_1134:0 "東オランダ"
  STATE_1135:0 "ナンシー"
@@ -1268,7 +1268,7 @@
  STATE_1267:0 "セントラル・コースト"
  STATE_1268:0 "ロサンゼルス"
  STATE_1269:0 "アラウイ"
- STATE_1270:0 "ジャバル・ドゥルーズ"
+ STATE_1270:0 "ジャバル・ドゥルーズ西部"
  STATE_1271:0 "アチェ"
  STATE_1272:0 "ソマリ"
  STATE_1273:0 "西スマトラ"
@@ -1382,3 +1382,24 @@
  STATE_1381:0 "シェトランド諸島"
  STATE_1382:0 "ヘブリディーズ諸島"
  STATE_1383:0 "南西イングランド"
+ STATE_1384:0 "スラボニア西部"
+ STATE_1385:0 "バニジャ"
+ STATE_1386:0 "リカ"
+ STATE_1387:0 "ダルマチア北部"
+ STATE_1388:0 "スラボニア東部"
+ STATE_1389:0 "セレーム西部"
+ STATE_1390:0 "スルプスカ西部"
+ STATE_1391:0 "スルプスカ東部"
+ STATE_1392:0 "ヘルツェゴビナ東部"
+ STATE_1393:0 "ボスニア西部"
+ STATE_1394:0 "アシール"
+ STATE_1395:0 "アハサー"
+ STATE_1396:0 "シャンマル"
+ STATE_1397:0 "ジャハラ西部"
+ STATE_1398:0 "ジャハラ東部"
+ STATE_1399:0 "ダマスカス東部"
+ STATE_1400:0 "ジャバル・ドゥルーズ東部"
+ STATE_1401:0 "ヨルダン東部"
+ STATE_1402:0 "北イエメン東部"
+ STATE_1403:0 "南イエメン東部"
+ STATE_1404:0 "中央クルディスタン"
