--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -22,6 +22,46 @@
  JAP_Keisuke_Okada:0 "岡田啓介"
  JAP_Mitsumasa_Yonai:0 "米内光政"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
+ JAP_Suzuki_Doctrine:0 "鈴木ドクトリン"
+ JAP_Koh-i-Noor:0 "イギリス国王の王冠にはめ込まれた最大の宝石"
+ JAP_British_Indian_Army:0 "英印軍"
+ JAP_third_India-Japan_agreement:0 "第三次日印協定"
+ JAP_Free_and_Open_Indo-Pacific:0 "自由で開かれたインド太平洋戦略"
+ JAP_the_empire_on_which_the_sun_never_sets_in_the_western_world:0 "西洋における太陽の沈まない国"
+ JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_relationship_with_Sick_Free_State:0 "瀕死の自由の国との関係"
+ JAP_relationship_with_The_empire_on_which_the_sun_never_sets:0 "かつての太陽の沈まない国との関係"
+ JAP_handover_of_East_Timor:0 "東ティモール返還"
+ JAP_impact_on_alaska:0 "アラスカへの影響"
+ JAP_impact_on_california:0 "カリフォルニアへの影響"
+ JAP_Toshin-ron:0 "東進論"
+ JAP_relationship_with_fallen_Red_star:0 "堕ちた赤い星との関係"
+ JAP_eliminating_threat_of_Siberia:0 "シベリアの脅威を排除"
+ JAP_support_for_cossacks_in_far_east:0 "極東のコサックを支援"
+ JAP_Baikal-Amur_Mainline:0 "バム鉄道"
+ JAP_Hokushin-ron:0 "北進論"
+ JAP_reject_the_Anglo-American_and_Russian_centered_peace:0 "英米ソ本位の平和主義を排す"
+ JAP_appointment_reform_bureaucrats:0 "革新官僚を任命"
+ JAP_cooperation_with_Kodoha:0 "皇道派と協力"
+ JAP_coup:0 "國家に対する打撃"
+ JAP_stop_Meiji_Constitution:0 "憲法を停止"
+ JAP_dissolution_of_both_parliament:0 "両院を解散"
+ JAP_martial_law_of_all_prefectures:0 "全國に戒厳令を！"
+ JAP_start_of_Showa_Ishin:0 "昭和維新を開始"
+ JAP_removal_of_upper_class:0 "特権階級を排除"
+ JAP_Greater_Japan_Party:0 "大日本党"
+ JAP_acceleration_of_Shintaisei:0 "新体制運動を加速"
+ JAP_acceleration_of_Shintaisei_in_territories_acquired:0 "外地の新体制運動を加速"
+ JAP_East_Asia_bloc_economies:0 "東亜経済ブロック"
+ JAP_basu_ni_nori_okureru_na:0 "バスに乗り遅れるな！"
+ JAP_abolition_of_private_property:0 "私有財産制の廃止...？"
+ JAP_competition_with_imperialism_great_powers:0 "帝國主義列強との競争"
+ JAP_cooperation_with_Toseiha:0 "統制派と協力"
+ JAP_A:0 "A"
+ JAP_destiny_of_Kodoha:0 "皇道派の命運"
+ JAP_B:0 "B"
+ JAP_high_defence_state:0 "高度国防国家"
+ JAP_appointment_reform_bureaucrats:0 "革新官僚を任命"
  
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Konoe_Doctrine:0 "近衛ドクトリン"
@@ -59,9 +99,9 @@
  JAP_abolition_of_private_property:0 "私有財産制の廃止...？"
  JAP_competition_with_imperialism_great_powers:0 "帝國主義列強との競争"
  JAP_cooperation_with_Toseiha:0 "統制派と協力"
- JAP_A:0 "A"
+ JAP_Fumimaro_Konoe_A:0 "A"
  JAP_destiny_of_Kodoha:0 "皇道派の命運"
- JAP_B:0 "B"
+ JAP_Fumimaro_Konoe_B:0 "B"
  JAP_high_defence_state:0 "高度国防国家"
  JAP_appointment_reform_bureaucrats:0 "革新官僚を任命"
  
