--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -24,11 +24,23 @@
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Suzuki_Doctrine:0 "鈴木ドクトリン"
  JAP_Koh-i-Noor:0 "イギリス国王の王冠にはめ込まれた最大の宝石"
+ JAP_Kantaro_Suzuki_A:0 "A"
  JAP_British_Indian_Army:0 "英印軍"
  JAP_third_India-Japan_agreement:0 "第三次日印協定"
- JAP_Free_and_Open_Indo-Pacific:0 "自由で開かれたインド太平洋戦略"
+ JAP_Kantaro_Suzuki_B:0 "B"
+ JAP_Free_and_Open_Indian_Ocean:0 "自由で開かれたインド洋戦略"
  JAP_the_empire_on_which_the_sun_never_sets_in_the_western_world:0 "西洋における太陽の沈まない国"
  JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_tin_of_British_Malaya:0 "英領マレーの錫鉱床"
+ JAP_Kantaro_Suzuki_C:0 "C"
+ JAP_Anglo-Japanese_Joint_Naval_Commission:0 "日英合同海軍委員会"
+ JAP_Rim_of_the_Pacific_Exercise:0 "環太平洋合同演習"
+ JAP_Pacific_Ocean:0 "太平洋は名の如く平和の洋"
+ JAP_Iron_of_Australasia:0 "オーストララシアの鉄鉱床"
+ JAP_Australia_Japan_New_Zealand_Security_Treaty:0 "太平洋安全保障条約"
+ JAP_Canadian_Pacific:0 "CP鉄道"
+ JAP_Free_and_Open_Pacific_Ocean:0 "自由で開かれた太平洋戦略"
+ JAP_fourth_Anglo-Japanese_Alliance:0 "第四次日英同盟"
  
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Konoe_Doctrine:0 "近衛ドクトリン"
@@ -47,11 +59,7 @@
  JAP_relationship_with_fallen_Red_star:0 "堕ちた赤い星との関係"
  JAP_eliminating_threat_of_Siberia:0 "シベリアの脅威を排除"
  JAP_support_for_cossacks_in_far_east:0 "極東のコサックを支援"
-<<<<<<< HEAD
  JAP_Baikal-Amur_Mainline:0 "バム鉄道"
-=======
- JAP_Baikal-Amur_Mainline:0 "バイカル・アムール鉄道"
->>>>>>> a5a088a2ca196dd9a5593f9bafd29015801793b5
  JAP_Hokushin-ron:0 "北進論"
  JAP_reject_the_Anglo-American_and_Russian_centered_peace:0 "英米ソ本位の平和主義を排す"
  JAP_appointment_reform_bureaucrats:0 "革新官僚を任命"
