railway in great britain and ireland

--- a/localisation/english/map/geacps_victory_points_l_english.yml
+++ b/localisation/english/map/geacps_victory_points_l_english.yml
@@ -20,6 +20,7 @@
  VICTORY_POINTS_377:0 "カーディフ"
  VICTORY_POINTS_382:0 "カルーガ"
  VICTORY_POINTS_383:0 "ヨーテボリ"
+ VICTORY_POINTS_385:0 "ロンドンデリー"
  VICTORY_POINTS_391:0 "アムステルダム"
  VICTORY_POINTS_392:0 "ウリヤノスク"
  VICTORY_POINTS_402:0 "シェドルツェ"
@@ -876,6 +877,7 @@
  VICTORY_POINTS_11159:1 "ペトロザヴォーツク"
  VICTORY_POINTS_11202:0 "プスコフ"
  VICTORY_POINTS_11215:0 "カールスクルーナ"
+ VICTORY_POINTS_11218:0 "ダンフリース"
  VICTORY_POINTS_11225:0 "クイブィシェフ"
  VICTORY_POINTS_11234:0 "ヴェリーキエ・ルーキ"
  VICTORY_POINTS_11241:0 "ヴィーチェプスク"
