--- a/localisation/english/map/geacps_victory_points_l_english.yml
+++ b/localisation/english/map/geacps_victory_points_l_english.yml
@@ -524,6 +524,7 @@
  VICTORY_POINTS_6927:0 "ジローナ"
  VICTORY_POINTS_6933:0 "ベージャ"
  VICTORY_POINTS_6935:0 "ヴァン"
+ VICTORY_POINTS_6936:0 "パレンシア"
  VICTORY_POINTS_6938:0 "カスタモヌ"
  VICTORY_POINTS_6966:0 "トゥルトーザ"
  VICTORY_POINTS_6973:0 "ラ・スペツィア"
@@ -741,6 +742,7 @@
  VICTORY_POINTS_9807:0 "盛岡"
  VICTORY_POINTS_9809:0 "ポドゴリツァ"
  VICTORY_POINTS_9814:0 "ロサンゼルス"
+ VICTORY_POINTS_9815:0 "ウエルバ"
  VICTORY_POINTS_9817:0 "ポルト"
  VICTORY_POINTS_9823:0 "シャンルウルファ"
  VICTORY_POINTS_9832:0 "プロビデンス"
@@ -753,6 +755,7 @@
  VICTORY_POINTS_9893:0 "ガズィアンテプ"
  VICTORY_POINTS_9898:0 "モンペリエ"
  VICTORY_POINTS_9902:0 "ブルガス"
+ VICTORY_POINTS_9903:0 "アルバセテ"
  VICTORY_POINTS_9904:0 "ローマ"
  VICTORY_POINTS_9907:0 "フィレンツェ"
  VICTORY_POINTS_9909:0 "ニース"
@@ -789,6 +792,7 @@
  VICTORY_POINTS_10083:0 "元山"
  VICTORY_POINTS_10106:0 "モースル"
  VICTORY_POINTS_10110:0 "木浦"
+ VICTORY_POINTS_10113:0 "テトゥアン"
  VICTORY_POINTS_10116:0 "ブバネーシュワル"
  VICTORY_POINTS_10125:0 "名古屋"
  VICTORY_POINTS_10128:0 "松本"
@@ -1110,6 +1114,7 @@
  VICTORY_POINTS_13090:0 "ウナラスカ"
  VICTORY_POINTS_13091:0 "アンカレッジ"
  VICTORY_POINTS_13215:0 "メヒカリ"
+ VICTORY_POINTS_13232:0 "サモラ"
  VICTORY_POINTS_13236:0 "東ベルリン"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  VICTORY_POINTS_13238:0 "ベルリン"
